--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "latex-workshop.latex.autoBuild.run": "never",
     "workbench.colorTheme": "Default Light+",
     "diffEditor.wordWrap": "on",
-    "editor.wordWrap": "on"
+    "editor.wordWrap": "on",
+    "files.autoSave": "onWindowChange"
 }
