--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "workbench.colorTheme": "Default Light+",
     "diffEditor.wordWrap": "on",
     "editor.wordWrap": "on",
-    "files.autoSave": "onWindowChange"
+    "files.autoSave": "onWindowChange",
+    "latex-workshop.view.pdf.ref.viewer":"auto"
 }
